fin Seccion 10 auth

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3005
-DB_CNN=mongodb+srv://mean_user:4I5XHOrvutQG0UhR@cluster0.urtzn.mongodb.net/test
+DB_CNN=mongodb+srv://mean_user:4I5XHOrvutQG0UhR@cluster0.urtzn.mongodb.net/test3
+JWT_SECRET=JF34ijt)$%)$USIDgfjk43209()$4h89rh2
